--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
     const timeLeft=document.querySelector('.display__time-left');
     const endTime=document.querySelector('.display__end-time');
     const buttons=document.querySelectorAll('.timer__button');
+    function timer(seconds){
+        const now=Date.now();
+        const end=now+seconds*1000;
+        displayEnd(end);
+       
+    }
     
+    function displayEnd(time){
+        const end=new Date(time);
+        endTime.textContent=`Finishes at ${end.getHours()}:${end.getMinutes()<10 ? '0' : ''}${end.getMinutes()}`;
+    }
+    timer(3000);
 </script>
 <style>
 html {
